[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "openai>=1.79.0",
    "pdfplumber>=0.11.6",
    "psycopg2-binary>=2.9.10",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "trafilatura>=2.0.0",
    "werkzeug>=3.1.3",
    "flask-wtf>=1.2.2",
    "bcrypt>=4.3.0",
    "requests>=2.32.5",
    "flask-session>=0.8.0",
    "sqlalchemy>=2.0.41",
]
